# proyecto_iris

./: pyproject.toml
models/: iris-knn_model.pck  iris-regresion_model.pck  iris-svm_model.pck  iris-tree_model.pck
notebooks/: client.ipynb  iris.ipynb
proyecto_iris/: predict_app.py  predict_service.py
tests/: iris.py
